--- a/gallery-1.html
+++ b/gallery-1.html
@@ -115,8 +115,8 @@
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
         <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
-        <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
+        <li><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></li>
+        <li><a href="rods.html">Curtains Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -234,8 +234,8 @@
     <li class="filter" data-role="button" data-filter=".silhouette">Silhoutte Blinds</li>
     <li class="filter" data-role="button" data-filter=".galaxy">Galaxy (Vertical Sheer Blinds)</li>
     <li class="filter" data-role="button" data-filter=".curtains">Curtains &amp; Drapes</li>
-    <li class="filter" data-role="button" data-filter=".stitch">Curtain Stitch Type</li>
-    <li class="filter" data-role="button" data-filter=".rods">Curtains &amp; Drapes Rod Type</li>
+    <li class="filter" data-role="button" data-filter=".stitch">Curtains Stitch Type</li>
+    <li class="filter" data-role="button" data-filter=".rods">Curtains Rod Type</li>
     <li class="filter" data-role="button" data-filter=".honeycomb">Honeycomb</li>
     <li class="filter" data-role="button" data-filter=".dual">Dual Shades</li>
     <li class="filter" data-role="button" data-filter=".outdoor">Outdoor Shades</li>
@@ -865,7 +865,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/1.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -885,7 +885,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/2.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -905,7 +905,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/3.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -925,7 +925,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/4.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -945,7 +945,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/5.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -965,7 +965,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/6.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -985,7 +985,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/7.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1005,7 +1005,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/8.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1025,7 +1025,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/9.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1045,7 +1045,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/pile/10.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtain Stitch Type</h3>
+                                            <h3>Curtains Stitch Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1067,7 +1067,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/1.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1087,7 +1087,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/2.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1107,7 +1107,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/3.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1127,7 +1127,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/4.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1147,7 +1147,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/5.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1167,7 +1167,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/6.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1187,7 +1187,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/7.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1207,7 +1207,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/8.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1227,7 +1227,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/9.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1247,7 +1247,7 @@
                                     <div class="content-box">
                                         <div class="view-btn"><a href="assets/images/gallery/rods/10.jpg" class="lightbox-image" data-fancybox="gallery">+</a></div>
                                         <div class="text">
-                                            <h3>Curtains &amp; Drapes Rod Type</h3>
+                                            <h3>Curtains Rod Type</h3>
                                             <ul>
                                                 <li><a href="index-2.html">Residential</a></li>
                                                 <li>/</li>
@@ -1887,8 +1887,8 @@
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
                                             <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
-                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
