--- a/about.html
+++ b/about.html
@@ -116,8 +116,8 @@
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
         <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
-        <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
+        <li><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></li>
+        <li><a href="rods.html">Curtains Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -569,8 +569,8 @@
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
                                             <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
-                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
