--- a/outdoor.html
+++ b/outdoor.html
@@ -116,8 +116,8 @@
         <li><a href="silhouette.html">Silhoutte Blinds</a></li>
         <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
         <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
-        <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-        <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
+        <li><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></li>
+        <li><a href="rods.html">Curtains Rod Type</a></li>
         <li><a href="honeycomb.html">Honeycomb</a></li>
         <li><a href="dual_blackout.html">Dual Shades</a></li>
         <li><a href="outdoor.html">Outdoor Shades</a></li>
@@ -260,11 +260,11 @@
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></h5>
+                                            <h5><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
-                                            <h5><a href="rods.html">Curtains &amp; Drapes Rod Type</a></h5>
+                                            <h5><a href="rods.html">Curtains Rod Type</a></h5>
                                             <span class="line"></span>
                                         </li>
                                         <li>
@@ -478,8 +478,8 @@
                                             <li><a href="silhouette.html">Silhoutte Blinds</a></li>
                                             <li><a href="galaxy.html">Galaxy (Vertical Sheer Blinds)</a></li>
                                             <li><a href="curtains.html">Curtains &amp; Drapes</a></li>
-                                            <li><a href="pile_pleat_pinches.html">Curtain Stitch Type</a></li>
-                                            <li><a href="rods.html">Curtains &amp; Drapes Rod Type</a></li>
+                                            <li><a href="pile_pleat_pinches.html">Curtains Stitch Type</a></li>
+                                            <li><a href="rods.html">Curtains Rod Type</a></li>
                                             <li><a href="honeycomb.html">Honeycomb</a></li>
                                         </ul>
                                     </div>
