--- a/curtains.html
+++ b/curtains.html
@@ -332,7 +332,7 @@
                                             <input type="text" name="phone" placeholder="Phone" required="">
                                         </div>
                                         <div class="form-group">
-                                            <textarea name="message" placeholder="Message"></textarea>
+                                            <textarea name="message" placeholder="Number of windows"></textarea>
                                         </div>
                                         <div class="form-group message-btn">
                                             <button type="submit" class="theme-btn-one">Submit</button>
