--- a/curtains.html
+++ b/curtains.html
@@ -332,7 +332,10 @@
                                             <input type="text" name="phone" placeholder="Phone" required="">
                                         </div>
                                         <div class="form-group">
-                                            <textarea name="message" placeholder="Number of windows"></textarea>
+                                            <input type="text" name="product_name" placeholder="Product Name" required="">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" name="number_of_windows" placeholder="Number of Windows" required="">
                                         </div>
                                         <div class="form-group message-btn">
                                             <button type="submit" class="theme-btn-one">Submit</button>
