--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <link href="assets/css/animate.css" rel="stylesheet">
 <link href="assets/css/color.css" rel="stylesheet">
     <link href="assets/css/global.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.cs" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet">
     <style>
         /* Render testimonial pager as dots instead of thumbnails */
